<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/classic"
                android:textFontWeight="20"
                android:textSize="20sp"
                android:layout_marginTop="15dp"
                tools:targetApi="p">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_all"
                android:id="@+id/classicViewAll"
                android:layout_marginTop="15dp"
                android:textColor="@color/colorAccent"
                android:gravity="end">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <include layout="@layout/activity_classic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </include>
            </HorizontalScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comic"
                android:textFontWeight="20"
                android:textSize="20sp"
                android:layout_marginTop="15dp"
                tools:targetApi="p">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_all"
                android:id="@+id/comicViewAll"
                android:layout_marginTop="15dp"
                android:textColor="@color/colorAccent"
                android:gravity="end">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <include layout="@layout/activity_comic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </include>
            </HorizontalScrollView>

        </LinearLayout>

<!--        <include-->
<!--            layout="@layout/bussiness"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"/>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fantasy"
                android:textFontWeight="20"
                android:textSize="20sp"
                android:layout_marginTop="15dp">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="View All >"
                android:id="@+id/fantasyViewAll"
                android:layout_marginTop="15dp"
                android:textColor="@color/colorAccent"
                android:gravity="end">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <include layout="@layout/activity_fantasy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </include>
            </HorizontalScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Fiction "
                android:textFontWeight="20"
                android:textSize="20sp"
                android:layout_marginTop="15dp">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="View All >"
                android:id="@+id/fictionViewAll"
                android:layout_marginTop="15dp"
                android:textColor="@color/colorAccent"
                android:gravity="end">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <include layout="@layout/activity_fiction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </include>
            </HorizontalScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="History "
                android:textFontWeight="20"
                android:textSize="20sp"
                android:layout_marginTop="15dp">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="View All >"
                android:id="@+id/historyViewAll"
                android:layout_marginTop="15dp"
                android:textColor="@color/colorAccent"
                android:gravity="end">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <include layout="@layout/activity_history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </include>
            </HorizontalScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Magical "
                android:textFontWeight="20"
                android:textSize="20sp"
                android:layout_marginTop="15dp">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="View All >"
                android:id="@+id/magicalViewAll"
                android:layout_marginTop="15dp"
                android:textColor="@color/colorAccent"
                android:gravity="end">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <include layout="@layout/activity_magical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </include>
            </HorizontalScrollView>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Medicals "
                android:textFontWeight="20"
                android:textSize="20sp"
                android:layout_marginTop="15dp">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="View All >"
                android:id="@+id/medicalViewAll"
                android:layout_marginTop="15dp"
                android:textColor="@color/colorAccent"
                android:gravity="end">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <include layout="@layout/activity_medicals"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </include>
            </HorizontalScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Romance "
                android:textFontWeight="20"
                android:textSize="20sp"
                android:layout_marginTop="15dp">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="View All >"
                android:id="@+id/romanceViewAll"
                android:layout_marginTop="15dp"
                android:textColor="@color/colorAccent"
                android:gravity="end">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <include layout="@layout/activity_romance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </include>
            </HorizontalScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Science "
                android:textFontWeight="20"
                android:textSize="20sp"
                android:layout_marginTop="15dp">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="View All >"
                android:id="@+id/scienceViewAll"
                android:layout_marginTop="15dp"
                android:textColor="@color/colorAccent"
                android:gravity="end">

            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <include layout="@layout/activity_science"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </include>
            </HorizontalScrollView>

        </LinearLayout>

        <include
            layout="@layout/enterprenuer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</ScrollView>